--- a/main.css/style.css
+++ b/main.css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {.titillium-web-extralight {
 	font-family: "Titillium Web", sans-serif;
 	font-weight: 200;
@@ -9,9 +11,4 @@ body {.titillium-web-extralight {
 }	
 h1 {
 	text-align: center;
-}
-p {
-	line-height: 32px;
-	margin-top: 0;
-	margin-bottom: 20px;
 }
