--- a/main.css/style.css
+++ b/main.css/style.css
@@ -1,14 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 
-body {.titillium-web-extralight {
-	font-family: "Titillium Web", sans-serif;
-	font-weight: 200;
-	font-style: normal;
-  }
+.introduction{
+	font-size: 12pt;
+	
+
 }
-* {
-	text-align: center;
-}	
-h1 {
-	text-align: center;
-}
+
