--- a/main.css/style.css
+++ b/main.css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 body{ 
-	background-image: url("overheadpresswoman.jpeg");
-
+	background-color: aliceblue;
 }
 .introduction{
 	font-size: 12pt
