--- a/main.css/style.css
+++ b/main.css/style.css
@@ -3,7 +3,7 @@ body{
 	font-size: medium;
 }
 .image{
-	display: fixed;
-	width: 250px;
-	height: 167px;
+	width: 300px;
+	height: 200px;
+	padding: 300;
 }
