--- a/main.css/style.css
+++ b/main.css/style.css
@@ -3,7 +3,7 @@ body{
 	font-size: medium;
 }
 .image{
-	width: 300px;
-	height: 300px;
-	padding: 300;
+	width: 80%;
+	height: 100%;
+	padding: 300px;
 }
