--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 body{
-	font-size: medium;
+	background-image:"mental-toughness-970x647.jpg"
 }
-.image{
-	width: 80%;
-	height: 100%;
-	padding: 300px;
-}
+
  
