--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 body{
-	background-image:"mental-toughness-970x647.jpg"
+	background-image: url("mental-toughness-970x647.jpg");
 }
 .background-image{
 	background-repeat: no-repeat;
