--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
-body{
+.background-image{
 	background-image: url('/images/Mental-Toughness-970x647.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
