--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,6 @@
 	background-attachment: fixed;
 	height: 100vh;
 	display: flex;
-	align-items: center;
-	justify-content:center;
-	color: white;
+	justify-content:baseline;
 }
  
