--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,19 @@
 }
 .conclusion-header{
 image {
-	transition: 0.5s;
-	width: 50%;
-	height: 50%;
+@keyframes spin {	
+	from{
+	transform: rotate(0deg);
+}
+to{
+	transform: rotate(360deg);
+}
+}
 }		
+}
+.spin{
+	width: 50px;
+	height: 50px;
+	animation: spin 2s linear infinite;
 }
  
