--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
-.background{
+body{
 	background-image:url('images/Mental-Toughness-970x647.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-attachment: fixed;
+	background-position: center;
+	margin: 0;
+	min-height: 200vh;
 }
 .conclusion-header{
 image {
