--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 	background-repeat: no-repeat;
 	background-position: center;
 	margin: 0;
-	height: 100vh;
+	min-height: 200vh;
 }
 .conclusion-header{
 image {
