--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,6 @@ body{
 	margin: 0;
 	min-height: 200vh;
 }
-.conclusion-header{
-image {
 @keyframes spin {	
 	from{
 	transform: rotate(0deg);
@@ -16,12 +14,9 @@ image {
 to{
 	transform: rotate(360deg);
 }
-}
-}		
-}
-.spin{
+}	
+img.spin{
 	width: 50px;
 	height: 50px;
 	animation: spin 2s linear infinite;
 }
- 
