--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
 	margin: 0;
 	min-height: 200vh;
 }
+.conclusion{
 @keyframes spin {	
 	from{
 	transform: rotate(0deg);
@@ -19,4 +20,5 @@ img.spin{
 	width: 50px;
 	height: 50px;
 	animation: spin 2s linear infinite;
+}
 }
