--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body{
 	margin: 0;
 	min-height: 200vh;
 }
-.conclusion{
 @keyframes spin {	
 	from{
 	transform: rotate(0deg);
@@ -16,10 +15,8 @@ to{
 	transform: rotate(360deg);
 }
 }	
-img.spin{
+.spin{
 	width: 50px;
 	height: 50px;
 	animation: spin 2s linear infinite;
-	opacity: 0.5;
-}
 }
