--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body{
 	margin: 0;
 	min-height: 200vh;
 }
+.call-to-action{
+
 @keyframes spin {	
 	from{
 	transform: rotate(0deg);
@@ -19,6 +21,7 @@ to{
 	width: 50px;
 	height: 50px;
 	animation: spin 2s linear infinite;
+}
 }
 .heading{
 	color: white;
