--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@ body{
 	margin: 0;
 	min-height: 200vh;
 }
-.call-to-action{
+.spin-image{
+	background-color: transparent;
+}
 
 @keyframes spin {	
 	from{
@@ -21,7 +23,6 @@ to{
 	width: 50px;
 	height: 50px;
 	animation: spin 2s linear infinite;
-}
 }
 .heading{
 	color: white;
